# TFM-comparativa-DL-magnificent7-prediccion-volatibilidad

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: deepar.yaml  garch.yaml  tft.yaml
notebooks/: README.md
scripts/: 01_download_data.py  02_build_dataset.py  03_fit_garch.py  04_train_deepar.py  05_train_tft.py  06_evaluate.py  07_dm_tests.py  08_interpret.py  run_all_models.sh
tests/: test_ablation.py  test_aggregate.py  test_attention.py  test_common_dataset.py  test_config.py  test_configs.py  test_deepar_factory.py  test_dm_test.py  test_download_fred.py  test_download_ohlcv.py  test_features.py  test_figures.py  test_garch.py  test_io.py  test_metrics.py  test_predictions_io.py  test_predictions_loader.py  test_rv.py  test_seeds.py  test_smoke_pipeline.py  test_splits.py  test_tables.py  test_tft_factory.py  test_vsn.py
tfm_volatility/: __init__.py  config.py
tfm_volatility/data/: download.py  features.py  rv.py  splits.py
tfm_volatility/eval/: aggregate.py  dm_test.py  figures.py  loader.py  metrics.py  tables.py
tfm_volatility/interpret/: ablation.py  attention.py  vsn.py
tfm_volatility/models/: common.py  deepar.py  garch.py  predictions.py  tft.py
tfm_volatility/utils/: io.py  seeds.py
