[project]
name = "tfm-volatility"
version = "0.1.0"
description = "TFM — Comparative volatility forecasting on Magnificent 7 (GARCH, DeepAR, TFT)"
requires-python = ">=3.11,<3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tfm_volatility"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires internet access (e.g. yfinance, FRED)",
    "slow: long-running tests",
]
