[project]
name = "tfm-volatility"
version = "0.1.0"
description = "TFM — Comparative volatility forecasting on Magnificent 7 (GARCH, DeepAR, TFT)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fredapi>=0.5.2",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tfm_volatility"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires internet access (e.g. yfinance, FRED)",
    "slow: long-running tests",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
