[project]
name = "tfm-volatility"
version = "0.1.0"
description = "TFM — Comparative volatility forecasting on Magnificent 7 (GARCH, DeepAR, TFT)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "arch>=6.3",
    "fredapi>=0.5.2",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pytorch-forecasting>=1.0,<2",
    "pytorch-lightning>=2.2,<3",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "tabulate>=0.10.0",
    "torch>=2.3,<3",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tfm_volatility"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests use `pytest.importorskip(...)` before module-level imports
# to skip the entire file when an optional dependency is missing.
"tests/*" = ["E402"]
# Scripts apply warnings filters and matplotlib backend selection before
# the package imports — that order is intentional.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires internet access (e.g. yfinance, FRED)",
    "slow: long-running tests",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
